--- a/miniflux/docker-compose.yml
+++ b/miniflux/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     image: miniflux/miniflux:2.0.42
     container_name: miniflux
     env_file: env.miniflux
+    restart: always
     ports:
       - 8050:8080
     depends_on:
@@ -23,6 +24,7 @@ services:
     image: postgres:15
     container_name: miniflux_db
     env_file: env.postgres
+    restart: always
     healthcheck:
       test: ["CMD", "pg_isready", "-U", "miniflux"]
       interval: 10s
