--- a/archivebox/docker-compose.yml
+++ b/archivebox/docker-compose.yml
@@ -10,5 +10,34 @@ services:
         volumes:
             - data:/data
 
+    nginx:
+        image: nginx:latest
+        volumes:
+            - ./default.conf:/etc/nginx/conf.d/default.conf
+            - letsencrypt:/etc/letsencrypt
+            - certbot:/var/www/certbot
+        ports:
+            - 8081:80
+            - 8082:443
+        depends_on:
+            - my_app
+        restart: always
+
+    letsencrypt:
+        image: certbot/certbot:latest
+        command: sh -c "certbot certonly --reinstall -v -d archivebox.notclickable.com --webroot --webroot-path /var/www/certbot/ --agree-tos --no-eff-email"
+        entrypoint: ""
+        depends_on:
+            - nginx
+        volumes:
+            - letsencrypt:/etc/letsencrypt
+            - certbot:/var/www/certbot
+            - letsencrypt_lib:/var/lib/letsencrypt
+        environment:
+            - TERM=xterm
+
 volumes:
   data:
+  certbot:
+  letsencrypt:
+  letsencrypt_lib:
