--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -14,6 +14,22 @@ server {
   return 301 https://www.youtube.com/@notclickable;
 }
 
+# Archivebox
+
+server {
+  listen 80;
+  server_name archivebox.notclickable.com;
+
+  location / {
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header Host $http_host;
+    proxy_set_header X-NginX-Proxy true;
+    proxy_pass http://host.docker.internal:8021;
+  }
+}
+
 # Miniflux
 
 server {
