--- a/archivebox/docker-compose.yml
+++ b/archivebox/docker-compose.yml
@@ -1,40 +1,53 @@
 services:
-    archivebox:
-        image: archivebox/archivebox:sha-829e377
-        command: server --quick-init 0.0.0.0:8000
-        ports:
-            - 8020:8000
-        environment:
-            - ALLOWED_HOSTS=*
-            - MEDIA_MAX_SIZE=750m
-        volumes:
-            - data:/data
+  backup:
+    image: alpine:3.17.2
+    container_name: calibre_backup
+    entrypoint: "tail -f /dev/null"
+    volumes:
+      - data:/data
+      - letsencrypt:/etc/letsencrypt:ro
+      - letsencrypt_lib:/var/lib/letsencrypt:ro
+    restart: always
 
-    nginx:
-        image: nginx:latest
-        volumes:
-            - ./default.conf:/etc/nginx/conf.d/default.conf
-            - letsencrypt:/etc/letsencrypt
-            - certbot:/var/www/certbot
-        ports:
-            - 8081:80
-            - 8082:443
-        depends_on:
-            - archivebox
-        restart: always
+  archivebox:
+    image: archivebox/archivebox:sha-829e377
+    container_name: archivebox
+    command: server --quick-init 0.0.0.0:8000
+    ports:
+        - 8020:8000
+    environment:
+        - ALLOWED_HOSTS=*
+        - MEDIA_MAX_SIZE=750m
+    volumes:
+        - data:/data
 
-    letsencrypt:
-        image: certbot/certbot:latest
-        command: sh -c "certbot certonly --reinstall -v -d archivebox.notclickable.com --webroot --webroot-path /var/www/certbot/ --agree-tos --no-eff-email"
-        entrypoint: ""
-        depends_on:
-            - nginx
-        volumes:
-            - letsencrypt:/etc/letsencrypt
-            - certbot:/var/www/certbot
-            - letsencrypt_lib:/var/lib/letsencrypt
-        environment:
-            - TERM=xterm
+  nginx:
+    image: nginx:1.23.3
+    container_name: archivebox_nginx
+    volumes:
+        - ./default.conf:/etc/nginx/conf.d/default.conf
+        - letsencrypt:/etc/letsencrypt
+        - certbot:/var/www/certbot
+    ports:
+        - 8081:80
+        - 8082:443
+    depends_on:
+        - archivebox
+    restart: always
+
+  letsencrypt:
+    image: certbot/certbot:v2.4.0
+    container_name: archivebox_letsencrypt
+    command: sh -c "certbot certonly --reinstall -v -d archivebox.notclickable.com --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com"
+    entrypoint: ""
+    depends_on:
+        - nginx
+    volumes:
+        - letsencrypt:/etc/letsencrypt
+        - certbot:/var/www/certbot
+        - letsencrypt_lib:/var/lib/letsencrypt
+    environment:
+        - TERM=xterm
 
 volumes:
   data:
