--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -30,6 +30,21 @@ server {
   }
 }
 
+server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    server_name archivebox.notclickable.com;
+
+    ssl_certificate          /etc/letsencrypt-archivebox/live/archivebox.notclickable.com/fullchain.pem;
+    ssl_certificate_key      /etc/letsencrypt-archivebox/live/archivebox.notclickable.com/privkey.pem;
+
+    location / {
+        proxy_set_header   X-Forwarded-For $remote_addr;
+        proxy_set_header   Host $http_host;
+        proxy_pass         https://host.docker.internal:8022;
+    }
+}
+
 # Miniflux
 
 server {
