--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -14,97 +14,6 @@ server {
   return 301 https://www.youtube.com/@notclickable;
 }
 
-# Archivebox
-
-server {
-  listen 80;
-  server_name archivebox.notclickable.com;
-
-  location / {
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_set_header Host $http_host;
-    proxy_set_header X-NginX-Proxy true;
-    proxy_pass http://host.docker.internal:8021;
-  }
-}
-
-server {
-    listen 443 ssl;
-    listen [::]:443 ssl;
-    server_name archivebox.notclickable.com;
-
-    ssl_certificate          /etc/letsencrypt-archivebox/live/archivebox.notclickable.com/fullchain.pem;
-    ssl_certificate_key      /etc/letsencrypt-archivebox/live/archivebox.notclickable.com/privkey.pem;
-
-    location / {
-        proxy_set_header   X-Forwarded-For $remote_addr;
-        proxy_set_header   Host $http_host;
-        proxy_pass         https://host.docker.internal:8022;
-    }
-}
-
-# Miniflux
-
-server {
-  listen 80;
-  server_name miniflux.notclickable.com;
-
-  location / {
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_set_header Host $http_host;
-    proxy_set_header X-NginX-Proxy true;
-    proxy_pass http://host.docker.internal:8051;
-  }
-}
-
-server {
-  listen 443 ssl;
-  listen [::]:443 ssl;
-  server_name miniflux.notclickable.com;
-
-  ssl_certificate /etc/letsencrypt-miniflux/live/miniflux.notclickable.com/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt-miniflux/live/miniflux.notclickable.com/privkey.pem;
-
-  location / {
-    proxy_set_header X-Forwarded-For $remote_addr;
-    proxy_set_header Host $http_host;
-    proxy_pass https://host.docker.internal:8052;
-  }
-}
-
-# Calibre
-
-server {
-  listen 80;
-  server_name calibre.notclickable.com;
-
-  location / {
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_set_header Host $http_host;
-    proxy_set_header X-NginX-Proxy true;
-    proxy_pass http://host.docker.internal:8041;
-  }
-}
-
-server {
-  listen 443 ssl;
-  listen [::]:443 ssl;
-  server_name calibre.notclickable.com;
-  ssl_certificate /etc/letsencrypt-calibre/live/calibre.notclickable.com/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt-calibre/live/calibre.notclickable.com/privkey.pem;
-  location / {
-    proxy_set_header X-Forwarded-For $remote_addr;
-    proxy_set_header Host $http_host;
-    proxy_pass https://host.docker.internal:8042;
-  }
-}
-
 # Mastodon
 
 server {
@@ -162,5 +71,114 @@ server {
     proxy_set_header X-Forwarded-For $remote_addr;
     proxy_set_header Host $http_host;
     proxy_pass https://host.docker.internal:8011;
+  }
+}
+
+# Archivebox
+
+server {
+  listen 80;
+  server_name archivebox.notclickable.com;
+
+  location / {
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header Host $http_host;
+    proxy_set_header X-NginX-Proxy true;
+    proxy_pass http://host.docker.internal:8021;
+  }
+}
+
+server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    server_name archivebox.notclickable.com;
+
+    ssl_certificate          /etc/letsencrypt-archivebox/live/archivebox.notclickable.com/fullchain.pem;
+    ssl_certificate_key      /etc/letsencrypt-archivebox/live/archivebox.notclickable.com/privkey.pem;
+
+    location / {
+        proxy_set_header   X-Forwarded-For $remote_addr;
+        proxy_set_header   Host $http_host;
+        proxy_pass         https://host.docker.internal:8022;
+    }
+}
+
+# Jellyfin (8030)
+
+# Calibre
+
+server {
+  listen 80;
+  server_name calibre.notclickable.com;
+
+  location / {
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header Host $http_host;
+    proxy_set_header X-NginX-Proxy true;
+    proxy_pass http://host.docker.internal:8041;
+  }
+}
+
+server {
+  listen 443 ssl;
+  listen [::]:443 ssl;
+  server_name calibre.notclickable.com;
+  ssl_certificate /etc/letsencrypt-calibre/live/calibre.notclickable.com/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt-calibre/live/calibre.notclickable.com/privkey.pem;
+  location / {
+    proxy_set_header X-Forwarded-For $remote_addr;
+    proxy_set_header Host $http_host;
+    proxy_pass https://host.docker.internal:8042;
+  }
+}
+
+# Miniflux
+
+server {
+  listen 80;
+  server_name miniflux.notclickable.com;
+
+  location / {
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header Host $http_host;
+    proxy_set_header X-NginX-Proxy true;
+    proxy_pass http://host.docker.internal:8051;
+  }
+}
+
+server {
+  listen 443 ssl;
+  listen [::]:443 ssl;
+  server_name miniflux.notclickable.com;
+
+  ssl_certificate /etc/letsencrypt-miniflux/live/miniflux.notclickable.com/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt-miniflux/live/miniflux.notclickable.com/privkey.pem;
+
+  location / {
+    proxy_set_header X-Forwarded-For $remote_addr;
+    proxy_set_header Host $http_host;
+    proxy_pass https://host.docker.internal:8052;
+  }
+}
+
+# Standard Notes
+
+server {
+  listen 80;
+  server_name notes.notclickable.com;
+
+  location / {
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header Host $http_host;
+    proxy_set_header X-NginX-Proxy true;
+    proxy_pass http://host.docker.internal:8060;
   }
 }
