--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -167,7 +167,7 @@ server {
   }
 }
 
-# Standard Notes
+# Trilium
 
 server {
   listen 80;
@@ -179,6 +179,12 @@ server {
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header Host $http_host;
     proxy_set_header X-NginX-Proxy true;
+
+    # Allow websockets
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "upgrade";
+
     proxy_pass http://host.docker.internal:8060;
   }
 }
