--- a/notes/docker-compose.yml
+++ b/notes/docker-compose.yml
@@ -1,6 +1,17 @@
 services:
+  backup:
+    image: alpine:3.17.2
+    container_name: trilium_backup
+    entrypoint: "tail -f /dev/null"
+    volumes:
+      - trilium:/home/node/trilium-data
+      - letsencrypt:/etc/letsencrypt:ro
+      - letsencrypt_lib:/var/lib/letsencrypt:ro
+    restart: always
+
   trilium:
     image: zadam/trilium:0.59-latest
+    container_name: trilium
     restart: always
     environment:
       - TRILIUM_DATA_DIR=/home/node/trilium-data
@@ -9,5 +20,36 @@ services:
     volumes:
       - trilium:/home/node/trilium-data
 
+  nginx:
+    image: nginx:1.23.3
+    container_name: trilium_nginx
+    volumes:
+        - ./default.conf:/etc/nginx/conf.d/default.conf
+        - letsencrypt:/etc/letsencrypt
+        - certbot:/var/www/certbot
+    ports:
+        - 8061:80
+        - 8062:443
+    depends_on:
+        - trilium
+    restart: always
+
+  letsencrypt:
+    image: certbot/certbot:v2.4.0
+    container_name: trilium_letsencrypt
+    command: sh -c "certbot certonly --reinstall -v -d website.com --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com"
+    entrypoint: ""
+    depends_on:
+        - nginx
+    volumes:
+        - letsencrypt:/etc/letsencrypt
+        - certbot:/var/www/certbot
+        - letsencrypt_lib:/var/lib/letsencrypt
+    environment:
+        - TERM=xterm
+
 volumes:
   trilium:
+  certbot:
+  letsencrypt:
+  letsencrypt_lib:
