--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -188,3 +188,24 @@ server {
     proxy_pass http://host.docker.internal:8061;
   }
 }
+
+server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    server_name notes.notclickable.com;
+
+    ssl_certificate          /etc/letsencrypt-main-service/live/notes.notclickable.com/fullchain.pem;
+    ssl_certificate_key      /etc/letsencrypt-main-service/live/notes.notclickable.com/privkey.pem;
+
+    location / {
+        proxy_set_header   X-Forwarded-For $remote_addr;
+        proxy_set_header   Host $http_host;
+
+        # Allow websockets
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+
+        proxy_pass         https://host.docker.internal:8062;
+    }
+}
