--- a/nginx/docker-compose.yml
+++ b/nginx/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     container_name: switchboard
     volumes:
       - ./default.conf:/etc/nginx/conf.d/default.conf
+      - ./grafana.conf:/etc/nginx/conf.d/grafana.conf
       - mastodon_letsencrypt:/etc/letsencrypt-mastodon
       - calibre_letsencrypt:/etc/letsencrypt-calibre
       - miniflux_letsencrypt:/etc/letsencrypt-miniflux
@@ -13,8 +14,18 @@ services:
       - 80:80
       - 443:443
     restart: always
+  
+  grafana:
+    image: grafana/grafana-oss:8.5.22
+    container_name: switchboard_grafana
+    ports:
+      - 8070:3000
+    restart: always
+    volumes:
+      - grafana_storage:/var/lib/grafana
 
 volumes:
+  grafana_storage:
   mastodon_letsencrypt:
     external: true
   calibre_letsencrypt:
