--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -209,3 +209,25 @@ server {
         proxy_pass         https://host.docker.internal:8062;
     }
 }
+
+# Grafana
+
+server {
+	listen 8070 default_server;
+	listen [::]:8070 default_server;
+
+	root /var/www/html;
+	index index.html index.htm index.nginx-debian.html;
+
+	server_name _;
+
+	location / {
+		try_files $uri $uri/ =404;
+	}
+
+	location / {
+    stub_status;
+    allow 127.0.0.1;
+    deny all;
+  }
+}
