--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -225,7 +225,7 @@ server {
 		try_files $uri $uri/ =404;
 	}
 
-	location / {
+	location /status {
     stub_status;
     allow 127.0.0.1;
     deny all;
