Grafana logs are working finally!

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,12 +4,18 @@ server {
   listen 80;
   server_name notclickable.com;
 
+  access_log /var/log/nginx/notclickable.com.access.logs;
+  error_log /var/log/nginx/notclickable.com.error.logs;
+
   return 301 https://www.youtube.com/@notclickable;
 }
 
 server {
   listen 80;
   server_name www.notclickable.com;
+
+  access_log /var/log/nginx/notclickable.com.access.logs;
+  error_log /var/log/nginx/notclickable.com.error.logs;
 
   return 301 https://www.youtube.com/@notclickable;
 }
@@ -19,6 +25,9 @@ server {
 server {
   listen 80;
   server_name notclickable.social;
+
+  access_log /var/log/nginx/notclickable.social.access.logs;
+  error_log /var/log/nginx/notclickable.social.error.logs;
 
   location / {
     proxy_set_header X-Real-IP $remote_addr;
@@ -34,6 +43,9 @@ server {
   listen 80;
   server_name www.notclickable.social;
 
+  access_log /var/log/nginx/notclickable.social.access.logs;
+  error_log /var/log/nginx/notclickable.social.error.logs;
+
   location / {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -48,6 +60,9 @@ server {
   listen 443 ssl;
   listen [::]:443 ssl;
   server_name notclickable.social;
+
+  access_log /var/log/nginx/notclickable.social.access.logs;
+  error_log /var/log/nginx/notclickable.social.error.logs;
 
   ssl_certificate /etc/letsencrypt-mastodon/live/notclickable.social/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt-mastodon/live/notclickable.social/privkey.pem;
@@ -63,6 +78,9 @@ server {
   listen 443 ssl;
   listen [::]:443 ssl;
   server_name www.notclickable.social;
+
+  access_log /var/log/nginx/notclickable.social.access.logs;
+  error_log /var/log/nginx/notclickable.social.error.logs;
 
   ssl_certificate /etc/letsencrypt-mastodon/live/www.notclickable.social/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt-mastodon/live/www.notclickable.social/privkey.pem;
@@ -80,6 +98,9 @@ server {
   listen 80;
   server_name archivebox.notclickable.com;
 
+  access_log /var/log/nginx/archivebox.notclickable.com.access.logs;
+  error_log /var/log/nginx/archivebox.notclickable.com.error.logs;
+
   location / {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -94,6 +115,9 @@ server {
     listen 443 ssl;
     listen [::]:443 ssl;
     server_name archivebox.notclickable.com;
+
+    access_log /var/log/nginx/archivebox.notclickable.com.access.logs;
+    error_log /var/log/nginx/archivebox.notclickable.com.error.logs;
 
     ssl_certificate          /etc/letsencrypt-archivebox/live/archivebox.notclickable.com/fullchain.pem;
     ssl_certificate_key      /etc/letsencrypt-archivebox/live/archivebox.notclickable.com/privkey.pem;
@@ -113,6 +137,9 @@ server {
   listen 80;
   server_name calibre.notclickable.com;
 
+  access_log /var/log/nginx/calibre.notclickable.com.access.logs;
+  error_log /var/log/nginx/calibre.notclickable.com.error.logs;
+
   location / {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -127,8 +154,13 @@ server {
   listen 443 ssl;
   listen [::]:443 ssl;
   server_name calibre.notclickable.com;
+
+  access_log /var/log/nginx/calibre.notclickable.com.access.logs;
+  error_log /var/log/nginx/calibre.notclickable.com.error.logs;
+
   ssl_certificate /etc/letsencrypt-calibre/live/calibre.notclickable.com/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt-calibre/live/calibre.notclickable.com/privkey.pem;
+
   location / {
     proxy_set_header X-Forwarded-For $remote_addr;
     proxy_set_header Host $http_host;
@@ -141,6 +173,9 @@ server {
 server {
   listen 80;
   server_name miniflux.notclickable.com;
+
+  access_log /var/log/nginx/miniflux.notclickable.com.access.logs;
+  error_log /var/log/nginx/miniflux.notclickable.com.error.logs;
 
   location / {
     proxy_set_header X-Real-IP $remote_addr;
@@ -157,6 +192,9 @@ server {
   listen [::]:443 ssl;
   server_name miniflux.notclickable.com;
 
+  access_log /var/log/nginx/miniflux.notclickable.com.access.logs;
+  error_log /var/log/nginx/miniflux.notclickable.com.error.logs;
+
   ssl_certificate /etc/letsencrypt-miniflux/live/miniflux.notclickable.com/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt-miniflux/live/miniflux.notclickable.com/privkey.pem;
 
@@ -172,6 +210,9 @@ server {
 server {
   listen 80;
   server_name notes.notclickable.com;
+
+  access_log /var/log/nginx/notes.notclickable.com.access.logs;
+  error_log /var/log/nginx/notes.notclickable.com.error.logs;
 
   location / {
     proxy_set_header X-Real-IP $remote_addr;
@@ -193,6 +234,9 @@ server {
     listen 443 ssl;
     listen [::]:443 ssl;
     server_name notes.notclickable.com;
+
+  access_log /var/log/nginx/notes.notclickable.com.access.logs;
+  error_log /var/log/nginx/notes.notclickable.com.error.logs;
 
     ssl_certificate          /etc/letsencrypt-notes/live/notes.notclickable.com/fullchain.pem;
     ssl_certificate_key      /etc/letsencrypt-notes/live/notes.notclickable.com/privkey.pem;
