--- a/nginx/prometheus.yml
+++ b/nginx/prometheus.yml
@@ -2,6 +2,11 @@ global:
   scrape_interval: 1m
 
 scrape_configs:
+  - job_name: 'prometheus'
+    scrape_interval: 1m
+    static_configs:
+      - targets: ['10.10.10.30:9090']
+
   - job_name: 'nginx exporter'
     scrape_interval: 5s
     static_configs:
