--- a/metube/compose.yml
+++ b/metube/compose.yml
@@ -4,8 +4,9 @@ services:
     container_name: metube
     restart: always
     environment:
-      - YTDL_OPTIONS={"format":"bestvideo[ext=mp4]+bestaudio[ext=m4a]/mp4"}
+      - YTDL_OPTIONS={"format":"bestvideo[ext=mp4]+bestaudio[ext=m4a]/mp4","cookiefile":"/cookies/cookies.txt"}
     ports:
       - 8080:8081
     volumes:
       - ./downloads:/downloads
+      - ./env.cookies:/cookies/cookies.txt
