--- a/homepage/compose.yml
+++ b/homepage/compose.yml
@@ -6,9 +6,6 @@ services:
     ports:
       - 8090:3000
     volumes:
-      - config:/app/config
+      - ./config:/app/config
       - //var/run/docker.sock:/var/run/docker.sock:ro
     restart: always
-
-volumes:
-  config:
