--- a/homepage/config/settings.yaml
+++ b/homepage/config/settings.yaml
@@ -2,6 +2,15 @@
 # For configuration options and examples, please see:
 # https://gethomepage.dev/en/configs/settings
 
+title: Not Clickable
+theme: light
+hideVersion: true
+
+layout:
+  Docker:
+    style: row
+    columns: 4
+
 providers:
   openweathermap: openweathermapapikey
   weatherapi: weatherapiapikey
