--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -7,7 +7,14 @@ server {
   access_log /var/log/nginx/notclickable.com.access.logs;
   error_log /var/log/nginx/notclickable.com.error.logs;
 
-  return 301 https://www.youtube.com/@notclickable;
+  location / {
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header Host $http_host;
+    proxy_set_header X-NginX-Proxy true;
+    proxy_pass http://host.docker.internal:8090;
+  }
 }
 
 server {
@@ -17,7 +24,14 @@ server {
   access_log /var/log/nginx/notclickable.com.access.logs;
   error_log /var/log/nginx/notclickable.com.error.logs;
 
-  return 301 https://www.youtube.com/@notclickable;
+  location / {
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header Host $http_host;
+    proxy_set_header X-NginX-Proxy true;
+    proxy_pass http://host.docker.internal:8090;
+  }
 }
 
 # Mastodon
