Added SSL for homepage

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,4 +1,4 @@
-# YouTube
+# Homepage
 
 server {
   listen 80;
@@ -13,7 +13,7 @@ server {
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header Host $http_host;
     proxy_set_header X-NginX-Proxy true;
-    proxy_pass http://host.docker.internal:8090;
+    proxy_pass http://host.docker.internal:8091;
   }
 }
 
@@ -30,9 +30,35 @@ server {
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header Host $http_host;
     proxy_set_header X-NginX-Proxy true;
-    proxy_pass http://host.docker.internal:8090;
+    proxy_pass http://host.docker.internal:8091;
   }
 }
+
+ server {
+     listen 443 ssl;
+     listen [::]:443 ssl;
+     server_name notclickable.com;
+     ssl_certificate          /etc/letsencrypt-homepage/live/notclickable.com/fullchain.pem;
+     ssl_certificate_key      /etc/letsencrypt-homepage/live/notclickable.com/privkey.pem;
+     location / {
+         proxy_set_header   X-Forwarded-For $remote_addr;
+         proxy_set_header   Host $http_host;
+         proxy_pass         https://host.docker.internal:8092;
+     }
+ }
+
+ server {
+     listen 443 ssl;
+     listen [::]:443 ssl;
+     server_name www.notclickable.com;
+     ssl_certificate          /etc/letsencrypt-homepage/live/notclickable.com/fullchain.pem;
+     ssl_certificate_key      /etc/letsencrypt-homepage/live/notclickable.com/privkey.pem;
+     location / {
+         proxy_set_header   X-Forwarded-For $remote_addr;
+         proxy_set_header   Host $http_host;
+         proxy_pass         https://host.docker.internal:8092;
+     }
+ }
 
 # Mastodon
 
