--- a/homepage/compose.yml
+++ b/homepage/compose.yml
@@ -9,3 +9,36 @@ services:
       - ./config:/app/config
       - //var/run/docker.sock:/var/run/docker.sock:ro
     restart: always
+
+  nginx:
+      image: nginx:1.23.3
+      container_name: homepage_nginx
+      volumes:
+          - ./default.conf:/etc/nginx/conf.d/default.conf
+          - letsencrypt:/etc/letsencrypt
+          - certbot:/var/www/certbot
+      ports:
+          - 8091:80
+          - 8092:443
+      depends_on:
+          - homepage
+      restart: always
+
+  letsencrypt:
+      image: certbot/certbot:v2.4.0
+      container_name: homepage_letsencrypt
+      command: sh -c "certbot certonly --reinstall -v -d notclickable.com -d www.notclickable.com --webroot --webroot-path /var/www/certbot/ --agree-tos --email jordan@notclickable.com"
+      entrypoint: ""
+      depends_on:
+          - nginx
+      volumes:
+          - letsencrypt:/etc/letsencrypt
+          - certbot:/var/www/certbot
+          - letsencrypt_lib:/var/lib/letsencrypt
+      environment:
+          - TERM=xterm
+
+volumes:
+    certbot:
+    letsencrypt:
+    letsencrypt_lib:
