--- a/nginx/compose.yml
+++ b/nginx/compose.yml
@@ -6,6 +6,7 @@ services:
       - ./default.conf:/etc/nginx/conf.d/default.conf
       - nginx_logs:/var/log/nginx
       - mastodon_letsencrypt:/etc/letsencrypt-mastodon
+      - homepage_letsencrypt:/etc/letsencrypt-homepage
     ports:
       - 80:80
       - 443:443
@@ -119,6 +120,8 @@ volumes:
   nginx_logs:
   loki:
   mastodon_letsencrypt:
+    external: true
+  homepage_letsencrypt:
     external: true
 
 networks:
