Added Mealie and Bookstack

--- a/homepage/config/settings.yaml
+++ b/homepage/config/settings.yaml
@@ -10,6 +10,9 @@ layout:
   Services:
     style: row
     columns: 4
+  Devices:
+    style: row
+    columns: 4
   Games:
     style: row
     columns: 4
