--- a/homepage/config/services.yaml
+++ b/homepage/config/services.yaml
@@ -6,8 +6,14 @@
     - Archivebox:
         icon: archivebox
         href: http://starbase-80:8020/
-        description: Archive webpages
+        description: Backup webpages
         container: archivebox
+
+    - Bookstack:
+        icon: bookstack
+        href: http://starbase-80:8120/
+        description: Private wiki
+        container: bookstack
 
     - Calibre:
         icon: calibre
@@ -25,6 +31,12 @@
         icon: home-assistant
         href: http://homeassistant.local:8123/
         description: Home automation
+
+    - Mealie:
+        icon: mealie
+        href: http://starbase-80:8110/
+        description: Recipe manager
+        container: mealie
 
     - MeTube:
         icon: metube
@@ -50,6 +62,14 @@
         description: Mastodon instance
         container: mastodon_web
 
+    - Trilium:
+        icon: trilium
+        href: http://starbase-80:8060/
+        description: Personal knowledge base
+        container: trilium
+
+- Devices:
+
     - Proxmox:
         icon: proxmox
         href: https://proxmox:8006/
@@ -59,12 +79,6 @@
         icon: synology
         href: https://192.168.1.3:5001/
         description: NAS
-
-    - Trilium:
-        icon: trilium
-        href: http://starbase-80:8060/
-        description: Personal knowledge base
-        container: trilium
 
 - Games:
 
