--- a/joplin/compose.yml
+++ b/joplin/compose.yml
@@ -1,6 +1,6 @@
 services:
     app:
-      image: joplin/server:latest
+      image: joplin/server:2.10.10-beta
       container_name: joplin_app
       depends_on:
           - db
@@ -20,6 +20,7 @@ services:
           - 8061:5432
       restart: always
       env_file: env.db
+      command: -p 5432
       networks:
           - joplin
 
