--- a/wikijs/compose.yml
+++ b/wikijs/compose.yml
@@ -1,4 +1,12 @@
 services:
+  backup:
+    image: alpine:3.17.2
+    container_name: wikijs_backup
+    entrypoint: "tail -f /dev/null"
+    volumes:
+      - db-data:/var/lib/postgresql/data
+    restart: always
+
   db:
     image: postgres:11-alpine
     container_name: wikijs_db
