--- a/vscode/compose.yml
+++ b/vscode/compose.yml
@@ -1,7 +1,15 @@
 services:
-  code-server:
+  backup:
+    image: alpine:3.17.2
+    container_name: vscode_backup
+    entrypoint: "tail -f /dev/null"
+    volumes:
+      - config:/config
+    restart: always
+
+  vscode:
     image: linuxserver/code-server:4.11.0
-    container_name: code-server
+    container_name: vscode
     environment:
       - PUID=1000
       - PGID=1000
