--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -153,3 +153,22 @@ server {
     deny all;
   }
 }
+
+# Vaultwarden
+
+server {
+  listen 80;
+  server_name vaultwarden.notclickable.com;
+
+  access_log /var/log/nginx/vaultwarden.notclickable.com.access.logs;
+  error_log /var/log/nginx/vaultwarden.notclickable.com.error.logs;
+
+  location / {
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header Host $http_host;
+    proxy_set_header X-NginX-Proxy true;
+    proxy_pass http://host.docker.internal:8131;
+  }
+}
