--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -172,3 +172,18 @@ server {
     proxy_pass http://host.docker.internal:8131;
   }
 }
+
+server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    server_name vaultwarden.notclickable.com;
+
+    ssl_certificate          /etc/letsencrypt-vaultwarden/live/vaultwarden.notclickable.com/fullchain.pem;
+    ssl_certificate_key      /etc/letsencrypt-vaultwarden/live/vaultwarden.notclickable.com/privkey.pem;
+
+    location / {
+        proxy_set_header   X-Forwarded-For $remote_addr;
+        proxy_set_header   Host $http_host;
+        proxy_pass         https://host.docker.internal:8132;
+    }
+}
