--- a/vaultwarden/default.conf
+++ b/vaultwarden/default.conf
@@ -14,6 +14,32 @@ server {
         proxy_set_header Host $http_host;
         proxy_set_header X-NginX-Proxy true;
 
-        proxy_pass http://host.docker.internal:8130;
+        return 301 https://$host$request_uri;
+    }
+}
+
+upstream backend {
+    server host.docker.internal:8130;
+}
+
+server {
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name vaultwarden.notclickable.com;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!MEDIUM:!LOW:!aNULL:!NULL:!SHA;
+    ssl_prefer_server_ciphers on;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_tickets off;
+
+    ssl_certificate /etc/letsencrypt/live/vaultwarden.notclickable.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/vaultwarden.notclickable.com/privkey.pem;
+
+    location / {
+        proxy_pass http://backend;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
     }
 }
