--- a/homepage/compose.yml
+++ b/homepage/compose.yml
@@ -1,7 +1,7 @@
 version: "3.3"
 services:
   homepage:
-    image: ghcr.io/benphelps/homepage:v0.6.10
+    image: jordanroher/homepage:0.1
     container_name: homepage
     ports:
       - 8090:3000
